# distributed_systems

./: README.md  pipe.c  receiver.c  sender.c
TP1/pipes/: pipe.c
TP1/signals/: receiver.c
TP1/sockets/: socket_client.c
TP2/: prodCons.c  spinLock.c
TP3/: CMakeLists.txt
TP3/include/: Common.h
TP3/src/: Common.cpp  Coord.cpp  Part.cpp
signals/: sender.c
sockets/: socket_server.c
