CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(DEB VERSION 1.0)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(include)

#FILE(GLOB SOURCES "src/*.cpp")
SET(COORD src/Common.cpp src/Coord.cpp)
SET(PART src/Common.cpp src/Part.cpp)

ADD_EXECUTABLE(Coord ${COORD})
ADD_EXECUTABLE(Part ${PART})
